apps/subsystems/ai/n8n/namespace-n8n.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: n8n
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
