apps/subsystems/ai/n8n/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/hostname: n8n.${domain_name}
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  # setting tls to [], so that default certficate will be assigned
  tls: []
  rules:
  - host: n8n.${domain_name}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 5678
